--- a/templates/index.html
+++ b/templates/index.html
@@ -185,20 +185,6 @@
                 document.getElementById('numberofimages').value = 1
 
         }
-
-        $(document).ready(function() {
-            var wordCounts = {};
-            $("#textsearsh").keyup(function() {
-                var matches = this.value.match(/\b/g);
-                wordCounts[this.id] = matches ? matches.length / 2 : 0;
-                var finalCount = 0;
-                $.each(wordCounts, function(k, v) {
-                    finalCount += v;
-                });
-                $('#display_count').html(finalCount);
-                am_cal(finalCount);
-            }).keyup();
-        });
     </script>
 </head>
 
@@ -361,6 +347,21 @@
 
     imageWasSelectedPreviously('{{ goodImage }}')
         // }
+
+
+    $(document).ready(function() {
+        var wordCounts = {};
+        $("#textsearsh").keyup(function() {
+            var matches = this.value.match(/\b/g);
+            wordCounts[this.id] = matches ? matches.length / 2 : 0;
+            var finalCount = 0;
+            $.each(wordCounts, function(k, v) {
+                finalCount += v;
+            });
+            $('#display_count').html(finalCount);
+            // am_cal(finalCount);
+        }).keyup();
+    });
 </script>
 
 </html>
