--- a/templates/index.html
+++ b/templates/index.html
@@ -210,7 +210,7 @@
             <!-- <br> -->
 
             <input type="submit" id="submit" class="buttonsubmit raise" value="Generate Image(s)" style="min-width: 200px;min-height: 50px;font-size: .8em;font-weight: bold;border: 2px solid #0a1659;" onclick="precesstxt();" />
-            <button id="menuserverstates"></button>
+            <button id="menuserverstates" disabled></button>
             <br><br> AI response:
             <br>
             <div id="message" name="message" class="messagediv">
@@ -372,7 +372,7 @@
     }
     if ('{{serverStates}}' == -1) {
         document.getElementById("menuserverstates").innerText = '1 running process , No processes in queue , Your text will be queued.';
-        document.getElementById("menuserverstates").style.color = "#f5e900";
+        document.getElementById("menuserverstates").style.color = "#bfb300";
     }
     if ('{{serverStates}}' > 0) {
         document.getElementById("menuserverstates").innerText = '1 running process , ' + '{{serverStates}}' + ' processes in queue, Your text will be added to queue.';
